Fixed authorname alignment issue in narrow screen style

--- a/app/views/main.css
+++ b/app/views/main.css
@@ -28,6 +28,10 @@
 ul{
 	list-style-type: none;
 }
+
+li{
+	height: 120px;
+}
 .authorName{
 	font-size: 18px;
 }
